# eigenface

./: .gitignore  CMakeLists.txt  Eigenfaces.cpp  Eigenfaces.h  kvisp.cpp  kvisp.h  main.cpp
doc/: rapport.tex
